Add homepage list of auth methods

--- a/app/views/docs/authentication-management.phtml
+++ b/app/views/docs/authentication-management.phtml
@@ -1,6 +1,13 @@
 <p>
-    [TODO]    
+    Appwrite has build in features to help manage user accounts.
+    Users can be organized into teams and be given labels, so they can be given different permissions and access different resources.
+    Each user can also have their own preference object, which you can use to save preferences such as theme, language, and notification settings.
 </p>
+
+[TODO @STEVEN: TEAMS examples]
+
+[TODO @STEVEN: Labels]
+
 
 <h2><a href="/docs/authentication#preferences" id="preferences">User Preferences</a></h2>
 <p>You can store user preferences on a user's account using Appwrite's <a href="/docs/client/account#accountUpdatePrefs">Update Preferences</a> endpoint. You can store user preferences such as theme, notification settings, or preferred language so they can be synced across multiple devices.</p>
