--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -84,13 +84,15 @@
     Security is very important to protect users' data and privacy. Appwrite uses a <a href="/docs/permissions">permissions model</a> coupled with user sessions to ensure users need correct permissions to access resources. With all Appwrite services, including databases and storage, access is granted at the collection, bucket, document, or file level. These permissions are enforced for client SDKs and server SDKs when using JWT, but are ignored when using a server SDK with an API key.
 </p>
 
-<h2><a href="/docs/authentication-security#password-history" id="password-history">Password History</a></h2>
+<h2><a href="#password-history" id="password-history">Password History</a></h2>
 <p>Password history prevents users from reusing recent passwords. This protects user accounts from security risks by enforcing a new password everytime it's changed.</p>
 
 <p>Password history can be enabled in the Auth service's <b>Security</b> tab on the Appwrite console. You can choose how many previous passwords to remember up to a maximum of 20 and block users from reusing them.</p>
 
-<h2><a href="/docs/authentication-security#password-dictionary" id="password-dictionary">Password Dictionary</a></h2>
+<h2><a href="#password-dictionary" id="password-dictionary">Password Dictionary</a></h2>
 <p>Password dictionary protects users from using bad passwords. It compares the user's password to the <a href="https://github.com/danielmiessler/SecLists/blob/master/Passwords/Common-Credentials/10k-most-common.txt">10,000</a> most common passwords and throws an error if there's a match. Together with <a href="/docs/rate-limits">rate limits</a>, password dictionary will significantly reduce the chance of a malicious actor from guessing user passwords.</p>
 
 
 <p>Password dictionary can be enabled in the Auth service's <b>Security</b> tab on the Appwrite console.</p>
+
+<h2><a href="#personal-information" id="personal-information">Personal Information</a></h2>
